# ID1217-Parallel-Programming

Homework1/MatrixSum/: CMakeLists.txt  Makefile
Homework1/MatrixSum/include/: MatrixSum.h
Homework1/MatrixSum/src/: MatrixSumA.c  MatrixSumB.c  MatrixSumC.c  main.c
Homework1/Quicksort/src/: main.c
Homework2/MatrixSum/src/: main.c
Homework2/Quicksort/: CMakeLists.txt
Homework2/Quicksort/src/: main.c
Homework3/: CMakeLists.txt  Makefile
Homework3/src/: main.c
Homework4/: .gitignore  Bathroom.java  BathroomSimulation.java  Man.java  Woman.java
Homework5/: CMakeLists.txt  Makefile  performance_results.csv
Homework5/result/: centralized-benchmark-result.md  ring-benchmark-result.md  symmetric-benchmark-result.md
Homework5/src/: centralized.c  centralizedPlot.py  ring.c  ringPlot.py  symmetric.c  symmetricPlot.py
